--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,11 @@
 <h1>Home Page</h1>
+<hr>
+<% @songs.each do |song| %>
+  <h2><%= song.name %></h2>
+  <h4>By: <%=song.author %></h4>
+  <% unless song.url.empty? %>
+    <iframe width="560" height="315" src="https://www.youtube.com/v/<%= song.url %>" frameborder="0" allowfullscreen></iframe>
+  <% end %>
+  <hr>
+<% end %>
+<p><a href="/new">Add a song</a></p>
