--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,7 +6,8 @@
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
   -->
-  <link rel="stylesheet" href="/stylesheets/normalize.css">
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/stylesheets/materialize.css">
   <!--
     application.css is where you put your styles
   -->
@@ -18,6 +19,18 @@
   <title></title>
 </head>
 <body>
-  <%= yield %>
+  <nav>
+    <div class="nav-wrapper teal lighten-2">
+      <a href="/" class="brand-logo">Music Wall</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="/new">New post</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <%= yield %>
+  </div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="javascript/materialize.min.js"></script>
 </body>
 </html>
