--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,9 +21,9 @@
 <body>
   <nav>
     <div class="nav-wrapper teal lighten-2">
-      <a href="/" class="brand-logo">Music Wall</a>
+      <a href="/" class="brand-logo center">Music Wall</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/new">New post</a></li>
+        <li><a href="/new">New song</a></li>
       </ul>
     </div>
   </nav>
