--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -2,31 +2,34 @@
   <h3>There are some issues with your submission:</h3>
   <ul>
   <% @song.errors.full_messages.each do |error| %>
-    <li><%= error %></li>
+    <li> <i class="material-icons">trending_flat</i><%= error %></li>
   <% end %>  
   </ul>
+<% else %>
+  <br>
 <% end %>
-<form class="col s12" method="post" action="/">
-<fieldset>
-  <legend>Add a new song</legend>
-  <div class="row">
-    <div class="input-field col s6">
-      <input id="name" name="name" type="text" value="<%=@song.name%>">
-      <label for="name">Song Name</label>
+<form class="col s12" style="width:100%" method="post" action="/">
+  <fieldset class="center">
+    <legend>Add a new song</legend>
+    <div class="row">
+      <div class="input-field col s6">
+        <input id="name" name="name" type="text" value="<%=@song.name%>">
+        <label for="name">Song Name</label>
+      </div>
+      <div class="input-field col s6">
+        <input id="author" name="author" type="text" value="<%=@song.author%>">
+        <label for="author">Song Author</label>
+      </div>
     </div>
-    <div class="input-field col s6">
-      <input id="author" name="author" type="text" value="<%=@song.author%>">
-      <label for="author">Song Author</label>
+    <div class="row">
+      <div class="input-field col s12">
+        <input id="url" name="url" type="text" value="<%=@song.url%>">
+        <label for="url">Song URL</label>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="input-field col s12">
-      <input id="url" name="url" type="text" value="<%=@song.url%>">
-      <label for="url">Song URL</label>
-    </div>
-  </div>
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
-  </button>
+      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+      <i class="material-icons right">send</i>
+    </button>
   </fieldset>
 </form>
+  
