--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -10,7 +10,7 @@
 <% else %>
   <br>
 <% end %>
-<form class="col s12" style="width:100%" method="post" action="/">
+<form class="col s12" style="width:100%" method="post" action="/song/create">
   <fieldset class="center">
     <legend>Add a new song</legend>
     <div class="row">
