replace UI with cards

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,20 +1,40 @@
-<h1 class="center-align">Song index</h1>
-<div class="divider"></div>
 <% @songs.each do |song| %>
-  <div class='row'>
-    <h4 class="teal-text text-lighten-3 center-align">
-      <%= Vote.where("song_id = ? AND upvote = ?", song.id, true).count %>
-      <%= song.name %>
-    </h4>
-    <h5 class="teal-text text-lighten-4 center-align">
-    <% if session[:user] %>
-    <a href="/users/upvote/<%= song.id %>"><i class="large material-icons left">thumb_up</i></a>
-    <% end %>
-    By: <%=song.author %></h5>
-    <div class="col s6 offset-s3">
-      <iframe width="560" height="315" src="https://www.youtube.com/v/<%= song.url %>" frameborder="0" allowfullscreen></iframe>
+
+<div class="row">
+  <div class="col s12 m12">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">
+          <% if session[:user] %>
+          <a href="/users/upvote/<%= song.id %>">
+            <% if Vote.where("user_id = ? AND song_id = ? AND upvote = ?", session[:user].id, song.id, true).take %>
+            <i class="medium material-icons teal-text left">thumb_up</i></a>
+            <% else %>
+            <i class="medium material-icons grey-text left">thumb_up</i></a>
+            <% end %>
+            <% end %>
+            <h4 class="left"><%= song.score %></h4>
+          </span>
+          <div class="clearfix"></div>
+          <div class="row">
+            <h2 class="teal-text text-lighten-4 center-align"><%= song.name %></h2>
+            <h5 class="teal-text text-lighten-4 center-align">
+              <%=song.author %>
+            </h5>
+          </div>
+          <div class="center-align">
+            <iframe width="560" height="315" src="https://www.youtube.com/v/<%= song.url %>" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <% if song.user_id %>
+          <div class="row">
+            <p class='center-align'>
+              Posted by: <%= User.find(song.user_id).name %>
+            </p>
+          </div>
+          <% end %>  
+        </div>
+      </div>
     </div>
   </div>
-  <div class="divider"></div>
+
 <% end %>
-<p><a href="/new">Add a song</a></p>
