--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,11 +6,11 @@
       <div class="card-content white-text">
         <span class="card-title">
           <% if session[:user] %>
-          <a href="/users/upvote/<%= song.id %>">
+          
             <% if Vote.where("user_id = ? AND song_id = ? AND upvote = ?", session[:user].id, song.id, true).take %>
-            <i class="medium material-icons teal-text left">thumb_up</i></a>
+              <i class="medium material-icons teal-text left" id="<%= song.id %>">thumb_up</i>
             <% else %>
-            <i class="medium material-icons grey-text left">thumb_up</i></a>
+              <i class="medium material-icons grey-text left" id="<%= song.id %>">thumb_up</i>
             <% end %>
             <% end %>
             <h4 class="left"><%= song.score %></h4>
